# my-xmonad

./: README.md  cabal.project  default.nix  my-xmonad.cabal  shell.nix  xmobar.hs  xmonad.hs  xmonadctl.hs
