cabal-version:      2.4
name:               my-xmonad
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable xmonad
    main-is:          xmonad.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , xmonad
                    , xmonad-contrib
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:  -threaded

executable xmonadctl
    main-is:          xmonadctl.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , X11
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:  -threaded

executable xmobar
    main-is:          xmobar.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , xmobar
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:  -threaded
